[not verified] Add watch command from packages/jitm

--- a/projects/packages/jitm/composer.json
+++ b/projects/packages/jitm/composer.json
@@ -47,6 +47,10 @@
 		],
 		"test-php": [
 			"@composer phpunit"
+		],
+		"watch": [
+			"Composer\\Config::disableProcessTimeout",
+			"pnpm run watch"
 		]
 	},
 	"minimum-stability": "dev",
