--- a/projects/packages/videopress/package.json
+++ b/projects/packages/videopress/package.json
@@ -64,6 +64,7 @@
 		"@automattic/jetpack-base-styles": "workspace:*",
 		"@automattic/jetpack-components": "workspace:*",
 		"@automattic/jetpack-connection": "workspace:*",
+		"@automattic/jetpack-shared-extension-utils": "github:automattic/jetpack-shared-extension-utils",
 		"@storybook/addon-actions": "6.5.13",
 		"@wordpress/api-fetch": "6.19.0",
 		"@wordpress/block-editor": "10.5.0",
