[not verified] Add test dir

--- a/projects/plugins/jetpack-mu-wpcom/phpunit.xml.dist
+++ b/projects/plugins/jetpack-mu-wpcom/phpunit.xml.dist
@@ -3,6 +3,9 @@
 		<testsuite name="main">
 			<directory prefix="test" suffix=".php">tests/php</directory>
 		</testsuite>
+		<testsuite name="coming-soon">
+			<directory suffix="-test.php">./coming-soon/test/</directory>
+		</testsuite>
 	</testsuites>
 	<filter>
 		<whitelist processUncoveredFilesFromWhitelist="false">
