--- a/projects/plugins/jetpack/package.json
+++ b/projects/plugins/jetpack/package.json
@@ -60,6 +60,7 @@
 		"@automattic/request-external-access": "1.0.0",
 		"@automattic/social-previews": "1.1.5",
 		"@automattic/viewport": "1.0.0",
+		"@chrismsimpson/metropolis": "github:dw5/Metropolis",
 		"@wordpress/base-styles": "4.13.0",
 		"@wordpress/block-editor": "10.5.0",
 		"@wordpress/blocks": "11.21.0",
