--- a/projects/plugins/boost/composer.json
+++ b/projects/plugins/boost/composer.json
@@ -24,6 +24,7 @@
 		"automattic/jetpack-lazy-images": "@dev",
 		"automattic/jetpack-my-jetpack": "@dev",
 		"automattic/jetpack-plugin-deactivation": "@dev",
+		"automattic/jetpack-plugins-installer": "0.2.x-dev",
 		"tedivm/jshrink": "1.4.0"
 	},
 	"require-dev": {
