--- a/projects/packages/videopress/package.json
+++ b/projects/packages/videopress/package.json
@@ -77,6 +77,7 @@
 		"@wordpress/dom-ready": "3.22.0",
 		"@wordpress/editor": "12.21.0",
 		"@wordpress/element": "4.20.0",
+		"@wordpress/hooks": "3.22.0",
 		"@wordpress/i18n": "4.22.0",
 		"@wordpress/icons": "9.13.0",
 		"@wordpress/url": "3.23.0",
