--- a/projects/plugins/search/composer.json
+++ b/projects/plugins/search/composer.json
@@ -4,20 +4,20 @@
 	"type": "wordpress-plugin",
 	"license": "GPL-2.0-or-later",
 	"require": {
-		"automattic/jetpack-autoloader": "@dev",
-		"automattic/jetpack-composer-plugin": "@dev",
-		"automattic/jetpack-config": "@dev",
-		"automattic/jetpack-connection": "@dev",
-		"automattic/jetpack-identity-crisis": "@dev",
-		"automattic/jetpack-my-jetpack": "@dev",
-		"automattic/jetpack-search": "@dev",
-		"automattic/jetpack-stats": "@dev",
-		"automattic/jetpack-status": "@dev",
-		"automattic/jetpack-sync": "@dev",
-		"automattic/jetpack-plugins-installer": "@dev"
+		"automattic/jetpack-autoloader": "^2.11.13",
+		"automattic/jetpack-composer-plugin": "^1.1.7",
+		"automattic/jetpack-config": "^1.12.0",
+		"automattic/jetpack-connection": "^1.47.1",
+		"automattic/jetpack-identity-crisis": "^0.8.33",
+		"automattic/jetpack-my-jetpack": "^2.6.1",
+		"automattic/jetpack-plugins-installer": "^0.2.2",
+		"automattic/jetpack-search": "^0.31.1",
+		"automattic/jetpack-stats": "^0.4.0",
+		"automattic/jetpack-status": "^1.15.2",
+		"automattic/jetpack-sync": "^1.44.2"
 	},
 	"require-dev": {
-		"automattic/jetpack-changelogger": "@dev",
+		"automattic/jetpack-changelogger": "^3.2.2",
 		"yoast/phpunit-polyfills": "1.0.4"
 	},
 	"autoload": {
@@ -38,15 +38,7 @@
 		"build-production": "pnpm run build-production",
 		"build-development": "pnpm run build"
 	},
-	"repositories": [
-		{
-			"type": "path",
-			"url": "../../packages/*",
-			"options": {
-				"monorepo": true
-			}
-		}
-	],
+	"repositories": [],
 	"minimum-stability": "dev",
 	"prefer-stable": true,
 	"extra": {
