--- a/projects/plugins/jetpack/composer.json
+++ b/projects/plugins/jetpack/composer.json
@@ -46,8 +46,7 @@
 		"automattic/jetpack-videopress": "@dev",
 		"automattic/jetpack-waf": "@dev",
 		"automattic/jetpack-wordads": "@dev",
-		"nojimage/twitter-text-php": "3.1.2",
-		"symfony/deprecation-contracts": "^2.5"
+		"nojimage/twitter-text-php": "3.1.2"
 	},
 	"require-dev": {
 		"antecedent/patchwork": "2.1.21",
