Try adding .phpcsignore for skeleton class file

--- a/tools/cli/skeletons/packages/.gitattributes
+++ b/tools/cli/skeletons/packages/.gitattributes
@@ -14,3 +14,4 @@ changelog/**      production-exclude
 phpunit.xml.dist  production-exclude
 .phpcs.dir.xml    production-exclude
 tests/**          production-exclude
+.phpcsignore      production-exclude
