--- a/projects/js-packages/image-guide/package.json
+++ b/projects/js-packages/image-guide/package.json
@@ -4,6 +4,7 @@
 	"version": "0.1.0-alpha",
 	"description": "Go through the dom to analyze image size on screen vs actual file size.",
 	"homepage": "https://github.com/Automattic/jetpack/tree/HEAD/projects/js-packages/image-guide/#readme",
+	"type": "module",
 	"bugs": {
 		"url": "https://github.com/Automattic/jetpack/labels/[JS Package] Image Guide"
 	},
@@ -23,7 +24,10 @@
 	},
 	"devDependencies": {
 		"@automattic/jetpack-webpack-config": "workspace:1.3.19",
+		"@typescript-eslint/parser": "5.36.1",
+		"eslint": "8.22.0",
 		"jest": "29.3.1",
+		"typescript": "4.8.2",
 		"webpack": "5.72.1",
 		"webpack-cli": "4.9.1"
 	},
@@ -32,8 +36,6 @@
 		"yarn": "use pnpm instead - see docs/yarn-upgrade.md"
 	},
 	"exports": {
-		".": "./index.jsx",
-		"./state": "./src/state",
-		"./action-types": "./src/state/action-types"
+		".": "./src/index.ts"
 	}
 }
