--- a/projects/plugins/boost/package.json
+++ b/projects/plugins/boost/package.json
@@ -6,7 +6,7 @@
 		"test": "tests"
 	},
 	"dependencies": {
-		"@automattic/jetpack-base-styles": "workspace:*",
+		"@automattic/jetpack-base-styles": "workspace:0.3.16",
 		"@wordpress/components": "22.1.0",
 		"@wordpress/element": "4.20.0",
 		"history": "5.3.0",
@@ -15,7 +15,8 @@
 		"svelte-navigator": "3.1.5"
 	},
 	"devDependencies": {
-		"@automattic/jetpack-components": "workspace:*",
+		"@automattic/jetpack-components": "workspace:0.26.4-alpha",
+		"@automattic/jetpack-image-guide": "workspace:0.1.0-alpha",
 		"@babel/core": "7.20.5",
 		"@babel/preset-env": "7.20.2",
 		"@babel/preset-react": "7.18.6",
