Get connection data from conn. package instead of Jetpack data
This should prove easier to use by other standalone plugins, which do not have the same data passed to JavaScript via Jetpack_Editor_Initial_State.
Grabbing the data from the connection package should consequently be easier.

--- a/projects/js-packages/shared-extension-utils/package.json
+++ b/projects/js-packages/shared-extension-utils/package.json
@@ -16,6 +16,7 @@
 	"scripts": {},
 	"dependencies": {
 		"@automattic/jetpack-analytics": "workspace:*",
+		"@automattic/jetpack-connection": "workspace:*",
 		"@wordpress/compose": "5.20.0",
 		"@wordpress/element": "4.20.0",
 		"@wordpress/i18n": "4.22.0",
