--- a/projects/js-packages/image-guide/package.json
+++ b/projects/js-packages/image-guide/package.json
@@ -16,8 +16,8 @@
 	"license": "GPL-2.0-or-later",
 	"author": "Automattic",
 	"scripts": {
-		"build": "pnpm run clean && pnpm run build-client",
-		"build-client": "pnpm webpack --config webpack.config.js",
+		"prepare": "pnpm build",
+		"build": "tsc",
 		"clean": "rm -rf build/",
 		"watch": "pnpm run build && pnpm webpack watch",
 		"test": "jest --config=tests/jest.config.js"
@@ -36,7 +36,7 @@
 		"yarn": "use pnpm instead - see docs/yarn-upgrade.md"
 	},
 	"exports": {
-		".": "./src/index.ts"
+		".": "./build/index.js"
 	},
-	"main": "src/index.ts"
+	"main": "build/index.js"
 }
