--- a/projects/js-packages/image-guide/tsconfig.json
+++ b/projects/js-packages/image-guide/tsconfig.json
@@ -1,9 +1,12 @@
 {
 	"extends": "jetpack-js-tools/tsconfig.base.json",
-	"include": [ "./src" ],
+	"include": [ "./src/*" ],
 	"compilerOptions": {
 		"typeRoots": [ "./node_modules/@types/", "src" ],
 		"sourceMap": true,
-		"forceConsistentCasingInFileNames": true
+		"forceConsistentCasingInFileNames": true,
+		"outDir": "./build/",
+		"noEmit": false,
+		"declaration": true
 	}
 }
