--- a/projects/plugins/jetpack-mu-wpcom/phpunit.xml.dist
+++ b/projects/plugins/jetpack-mu-wpcom/phpunit.xml.dist
@@ -1,7 +1,10 @@
 <phpunit bootstrap="tests/php/bootstrap.php" backupGlobals="false" colors="true" convertDeprecationsToExceptions="true">
 	<testsuites>
-		<testsuite name="main">
-			<directory prefix="test" suffix=".php">tests/php</directory>
+		<testsuite name="features">
+			<directory suffix="-test.php">tests/php/features</directory>
+		</testsuite>
+		<testsuite name="common">
+			<directory suffix="-test.php">tests/php/common</directory>
 		</testsuite>
 	</testsuites>
 	<filter>
