--- a/projects/js-packages/image-guide/package.json
+++ b/projects/js-packages/image-guide/package.json
@@ -24,7 +24,7 @@
 		"test": "NODE_OPTIONS=--experimental-vm-modules jest"
 	},
 	"devDependencies": {
-		"@automattic/jetpack-webpack-config": "workspace:*",
+		"@automattic/jetpack-webpack-config": "workspace:1.3.19",
 		"@typescript-eslint/parser": "5.36.1",
 		"eslint": "8.22.0",
 		"jest": "29.3.1",
