--- a/projects/js-packages/image-guide/package.json
+++ b/projects/js-packages/image-guide/package.json
@@ -37,7 +37,7 @@
 		"yarn": "use pnpm instead - see docs/yarn-upgrade.md"
 	},
 	"exports": {
-		".": "./build/index.d.ts"
+		".": "./build/index"
 	},
-	"main": "build/index.d.ts"
+	"main": "build/index"
 }
