[not verified] Revert "Fix type imports"
This reverts commit 66c2eadf0bb452121c45e7ef1887f632a977d09e.

--- a/projects/js-packages/image-guide/package.json
+++ b/projects/js-packages/image-guide/package.json
@@ -37,7 +37,7 @@
 		"yarn": "use pnpm instead - see docs/yarn-upgrade.md"
 	},
 	"exports": {
-		".": "./build/index"
+		".": "./build/index.d.ts"
 	},
-	"main": "build/index"
+	"main": "build/index.d.ts"
 }
