Allow heart-of-team to approve PRs for image-guide js package

--- a/.github/files/required-review.yaml
+++ b/.github/files/required-review.yaml
@@ -73,6 +73,7 @@
   paths:
    - 'projects/plugins/boost/**'
    - 'projects/plugins/super-cache/**'
+   - 'projects/js-packages/image-guide/**'
    - '!projects/plugins/*/composer.lock'
    - '!projects/plugins/*/composer.json'
    - '!projects/plugins/*/changelog/*'
