--- a/projects/js-packages/image-guide/package.json
+++ b/projects/js-packages/image-guide/package.json
@@ -36,8 +36,6 @@
 		"node": "^16.13.2",
 		"yarn": "use pnpm instead - see docs/yarn-upgrade.md"
 	},
-	"exports": {
-		".": "./build/index.d.ts"
-	},
-	"main": "build/index.d.ts"
+	"main": "build/index.js",
+	"types": "build/index.d.ts"
 }
