Beta: update admin menu to use parent Jetpack menu
One Menu to rule them all, One Menu to find them, One Menu to bring them all, and in the Jetpack bind them.

Until now, the Jetpack Beta plugin used its own menu implementation: it would declare a new "Jetpack Beta" top-level admin menu, or would move in the Jetpack menu if the Jetpack plugin was installed.

Since we've since developed the Admin UI package, we should now be able to have Jetpack Beta use that package and always be under the Jetpack menu.

This has the benefit of always having the Jetpack menu items in the same spot. It also makes things easier when you use Jetpack Beta with another Jetpack standalone plugin like Jetpack Boost. Until now, in that case you had 2 top-level menus: Jetpack (for Boost) and Jetpack Beta (for the beta plugin). Now it's only going to be the one "Jetpack" menu.

--- a/projects/plugins/beta/composer.json
+++ b/projects/plugins/beta/composer.json
@@ -8,6 +8,7 @@
 		"issues": "https://github.com/Automattic/jetpack/issues"
 	},
 	"require": {
+		"automattic/jetpack-admin-ui": "@dev",
 		"automattic/jetpack-autoloader": "@dev",
 		"composer/semver": "3.3.2",
 		"erusev/parsedown": "1.7.4"
