Updated package versions for automattic/jetpack-mu-wpcom

--- a/projects/plugins/jetpack-mu-wpcom/composer.json
+++ b/projects/plugins/jetpack-mu-wpcom/composer.json
@@ -3,10 +3,9 @@
 	"description": "Enhances your site with features powered by WordPress.com",
 	"type": "wordpress-plugin",
 	"license": "GPL-2.0-or-later",
-	"require": {},
 	"require-dev": {
 		"yoast/phpunit-polyfills": "1.0.4",
-		"automattic/jetpack-changelogger": "@dev",
+		"automattic/jetpack-changelogger": "^3.2.3",
 		"automattic/wordbless": "^0.4.0"
 	},
 	"autoload": {
@@ -29,15 +28,7 @@
 		"post-install-cmd": "WorDBless\\Composer\\InstallDropin::copy",
 		"post-update-cmd": "WorDBless\\Composer\\InstallDropin::copy"
 	},
-	"repositories": [
-		{
-			"type": "path",
-			"url": "../../packages/*",
-			"options": {
-				"monorepo": true
-			}
-		}
-	],
+	"repositories": [],
 	"minimum-stability": "dev",
 	"prefer-stable": true,
 	"extra": {
