--- a/projects/plugins/jetpack-mu-wpcom/package.json
+++ b/projects/plugins/jetpack-mu-wpcom/package.json
@@ -1,7 +1,7 @@
 {
 	"private": true,
 	"name": "@automattic/jetpack-mu-wpcom",
-	"version": "1.0.0",
+	"version": "1.0.1-alpha",
 	"description": "Enhances your site with features powered by WordPress.com",
 	"homepage": "https://jetpack.com",
 	"bugs": {
