--- a/projects/packages/videopress/package.json
+++ b/projects/packages/videopress/package.json
@@ -80,6 +80,7 @@
 		"@wordpress/icons": "9.13.0",
 		"@wordpress/url": "3.23.0",
 		"classnames": "2.3.1",
+		"copy-webpack-plugin": "11.0.0",
 		"debug": "4.3.4",
 		"filesize": "8.0.6",
 		"react": "17.0.2",
