--- a/projects/packages/videopress/package.json
+++ b/projects/packages/videopress/package.json
@@ -52,7 +52,8 @@
 		"sass-loader": "12.4.0",
 		"typescript": "4.8.2",
 		"webpack": "5.72.1",
-		"webpack-cli": "4.9.1"
+		"webpack-cli": "4.9.1",
+		"copy-webpack-plugin": "11.0.0"
 	},
 	"engines": {
 		"node": "^16.13.2",
@@ -80,7 +81,6 @@
 		"@wordpress/icons": "9.13.0",
 		"@wordpress/url": "3.23.0",
 		"classnames": "2.3.1",
-		"copy-webpack-plugin": "11.0.0",
 		"debug": "4.3.4",
 		"filesize": "8.0.6",
 		"react": "17.0.2",
