--- a/.github/files/required-review.yaml
+++ b/.github/files/required-review.yaml
@@ -28,6 +28,7 @@
    - 'projects/packages/**'
    - 'projects/plugins/jetpack/**'
    # Exclude packages managed by other teams, which are covered by other blocks below.
+   - '!projects/js-packages/image-guide/**'
    - '!projects/packages/backup/**'
    - '!projects/packages/search/**'
    - '!projects/packages/stats/**'
