--- a/projects/packages/videopress/package.json
+++ b/projects/packages/videopress/package.json
@@ -52,7 +52,8 @@
 		"sass-loader": "12.4.0",
 		"typescript": "4.8.2",
 		"webpack": "5.72.1",
-		"webpack-cli": "4.9.1"
+		"webpack-cli": "4.9.1",
+		"copy-webpack-plugin": "11.0.0"
 	},
 	"engines": {
 		"node": "^16.13.2",
