--- a/projects/packages/promote-posts/package.json
+++ b/projects/packages/promote-posts/package.json
@@ -1,7 +1,7 @@
 {
 	"private": true,
 	"name": "@automattic/jetpack-promote-posts",
-	"version": "0.1.0",
+	"version": "0.2.0-alpha",
 	"description": "Attract high-quality traffic to your site using Promoted Posts. Using this service, you can advertise a post or page on some of the millions of pages across WordPress.com and Tumblr from just $5 per day.",
 	"homepage": "https://github.com/Automattic/jetpack/tree/HEAD/projects/packages/promote-posts/#readme",
 	"bugs": {
@@ -15,13 +15,41 @@
 	"license": "GPL-2.0-or-later",
 	"author": "Automattic",
 	"scripts": {
-		"build": "echo 'Not implemented.'",
-		"build-js": "echo 'Not implemented.'",
-		"build-production": "echo 'Not implemented.'",
-		"build-production-js": "echo 'Not implemented.'",
-		"clean": "true"
+		"build": "NODE_PATH=\"$PWD/node_modules\" pnpm run clean && webpack",
+		"build-production": "NODE_ENV=production BABEL_ENV=production pnpm run build && pnpm run validate",
+		"clean": "rm -rf build/ .cache/",
+		"validate": "pnpm exec validate-es --no-error-on-unmatched-pattern build/",
+		"watch": "pnpm run build --watch"
 	},
-	"devDependencies": {},
+	"dependencies": {
+		"@automattic/jetpack-analytics": "workspace:*",
+		"@automattic/jetpack-components": "workspace:*",
+		"@automattic/jetpack-shared-extension-utils": "workspace:*",
+		"@wordpress/block-editor": "10.5.0",
+		"@wordpress/components": "22.1.0",
+		"@wordpress/data": "7.6.0",
+		"@wordpress/element": "4.20.0",
+		"@wordpress/icons": "9.13.0",
+		"@wordpress/i18n": "4.22.0",
+		"@wordpress/plugins": "4.20.0",
+		"react": "17.0.2",
+		"react-dom": "17.0.2"
+	},
+	"devDependencies": {
+		"@automattic/jetpack-webpack-config": "workspace:*",
+		"@babel/core": "7.20.5",
+		"@babel/preset-env": "7.20.2",
+		"@babel/register": "7.18.9",
+		"@babel/runtime": "7.20.6",
+		"@wordpress/browserslist-config": "5.5.0",
+		"sass": "1.54.4",
+		"sass-loader": "12.4.0",
+		"webpack": "5.72.1",
+		"webpack-cli": "4.9.1"
+	},
+	"browserslist": [
+		"extends @wordpress/browserslist-config"
+	],
 	"engines": {
 		"node": "^16.13.2",
 		"yarn": "use pnpm instead - see docs/yarn-upgrade.md"
