--- a/projects/packages/promote-posts/composer.json
+++ b/projects/packages/promote-posts/composer.json
@@ -29,6 +29,10 @@
 		],
 		"build-development": [
 			"pnpm run build"
+		],
+		"watch": [
+			"Composer\\Config::disableProcessTimeout",
+			"pnpm run watch"
 		]
 	},
 	"repositories": [
