--- a/projects/packages/promote-posts/composer.json
+++ b/projects/packages/promote-posts/composer.json
@@ -6,6 +6,7 @@
 	"require": {},
 	"require-dev": {
 		"yoast/phpunit-polyfills": "1.0.4",
+		"automattic/jetpack-assets": "@dev",
 		"automattic/jetpack-changelogger": "@dev"
 	},
 	"autoload": {
@@ -23,8 +24,16 @@
 		"test-php": [
 			"@composer phpunit"
 		],
-		"build-production": "echo 'Add your build step to composer.json, please!'",
-		"build-development": "echo 'Add your build step to composer.json, please!'"
+		"build-production": [
+			"pnpm run build-production"
+		],
+		"build-development": [
+			"pnpm run build"
+		],
+		"watch": [
+			"Composer\\Config::disableProcessTimeout",
+			"pnpm run watch"
+		]
 	},
 	"repositories": [
 		{
@@ -44,7 +53,7 @@
 			"link-template": "https://github.com/automattic/jetpack-promote-posts/compare/v${old}...v${new}"
 		},
 		"branch-alias": {
-			"dev-trunk": "0.1.x-dev"
+			"dev-trunk": "0.2.x-dev"
 		},
 		"textdomain": "jetpack-promote-posts",
 		"version-constants": {
