--- a/projects/packages/blaze/composer.json
+++ b/projects/packages/blaze/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "automattic/jetpack-promote-posts",
+	"name": "automattic/jetpack-blaze",
 	"description": "Attract high-quality traffic to your site using Promoted Posts.",
 	"type": "jetpack-library",
 	"license": "GPL-2.0-or-later",
@@ -48,16 +48,16 @@
 	"prefer-stable": true,
 	"extra": {
 		"autotagger": true,
-		"mirror-repo": "Automattic/jetpack-promote-posts",
+		"mirror-repo": "Automattic/jetpack-blaze",
 		"changelogger": {
-			"link-template": "https://github.com/automattic/jetpack-promote-posts/compare/v${old}...v${new}"
+			"link-template": "https://github.com/automattic/jetpack-blaze/compare/v${old}...v${new}"
 		},
 		"branch-alias": {
 			"dev-trunk": "0.2.x-dev"
 		},
-		"textdomain": "jetpack-promote-posts",
+		"textdomain": "jetpack-blaze",
 		"version-constants": {
-			"::PACKAGE_VERSION": "src/class-promote-posts.php"
+			"::PACKAGE_VERSION": "src/class-blaze.php"
 		}
 	}
 }
