--- a/projects/packages/blaze/package.json
+++ b/projects/packages/blaze/package.json
@@ -1,16 +1,16 @@
 {
 	"private": true,
-	"name": "@automattic/jetpack-promote-posts",
+	"name": "@automattic/jetpack-blaze",
 	"version": "0.2.0-alpha",
 	"description": "Attract high-quality traffic to your site using Promoted Posts. Using this service, you can advertise a post or page on some of the millions of pages across WordPress.com and Tumblr from just $5 per day.",
-	"homepage": "https://github.com/Automattic/jetpack/tree/HEAD/projects/packages/promote-posts/#readme",
+	"homepage": "https://github.com/Automattic/jetpack/tree/HEAD/projects/packages/blaze/#readme",
 	"bugs": {
 		"url": "https://github.com/Automattic/jetpack/labels/[Package] Promote Posts"
 	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/Automattic/jetpack.git",
-		"directory": "projects/packages/promote-posts"
+		"directory": "projects/packages/blaze"
 	},
 	"license": "GPL-2.0-or-later",
 	"author": "Automattic",
