add check for if the user is connected

--- a/projects/packages/blaze/composer.json
+++ b/projects/packages/blaze/composer.json
@@ -3,7 +3,9 @@
 	"description": "Attract high-quality traffic to your site using Blaze.",
 	"type": "jetpack-library",
 	"license": "GPL-2.0-or-later",
-	"require": {},
+	"require": {
+		"automattic/jetpack-connection": "@dev"
+	},
 	"require-dev": {
 		"yoast/phpunit-polyfills": "1.0.4",
 		"automattic/jetpack-assets": "@dev",
