Add basic PHPunit tests

--- a/projects/packages/blaze/composer.json
+++ b/projects/packages/blaze/composer.json
@@ -10,7 +10,8 @@
 	"require-dev": {
 		"yoast/phpunit-polyfills": "1.0.4",
 		"automattic/jetpack-assets": "@dev",
-		"automattic/jetpack-changelogger": "@dev"
+		"automattic/jetpack-changelogger": "@dev",
+		"automattic/wordbless": "@dev"
 	},
 	"autoload": {
 		"classmap": [
@@ -36,7 +37,9 @@
 		"watch": [
 			"Composer\\Config::disableProcessTimeout",
 			"pnpm run watch"
-		]
+		],
+		"post-install-cmd": "WorDBless\\Composer\\InstallDropin::copy",
+		"post-update-cmd": "WorDBless\\Composer\\InstallDropin::copy"
 	},
 	"repositories": [
 		{
@@ -61,6 +64,11 @@
 		"textdomain": "jetpack-blaze",
 		"version-constants": {
 			"::PACKAGE_VERSION": "src/class-blaze.php"
+		}
+	},
+	"config": {
+		"allow-plugins": {
+			"roots/wordpress-core-installer": true
 		}
 	}
 }
