--- a/projects/js-packages/image-guide/composer.json
+++ b/projects/js-packages/image-guide/composer.json
@@ -48,6 +48,7 @@
 		"changelogger": {
 			"link-template": "https://github.com/Automattic/jetpack-image-guide/compare/v${old}...v${new}"
 		},
-		"autotagger": true
+		"autotagger": true,
+		"release-branch-prefix": "image-guide"
 	}
 }
