Rolled back PHPCS utils updates that cause breaking tests.

--- a/projects/packages/codesniffer/composer.json
+++ b/projects/packages/codesniffer/composer.json
@@ -14,6 +14,8 @@
 	"require-dev": {
 		"automattic/jetpack-changelogger": "@dev",
 		"wp-coding-standards/wpcs": "2022-02-07 as 2.3.1",
+		"phpcsstandards/phpcsutils": "1.0.0-alpha3",
+		"phpcsstandards/phpcsextra": "1.0.0-alpha3",
 		"yoast/phpunit-polyfills": "1.0.4"
 	},
 	"autoload": {
