--- a/projects/plugins/backup/composer.json
+++ b/projects/plugins/backup/composer.json
@@ -4,15 +4,15 @@
 	"type": "library",
 	"license": "GPL-2.0-or-later",
 	"require": {
-		"automattic/jetpack-autoloader": "@dev",
-		"automattic/jetpack-backup": "@dev",
-		"automattic/jetpack-composer-plugin": "@dev",
-		"automattic/jetpack-plugins-installer": "@dev",
-		"automattic/jetpack-my-jetpack": "@dev"
+		"automattic/jetpack-autoloader": "^2.11.14",
+		"automattic/jetpack-backup": "^1.10.6",
+		"automattic/jetpack-composer-plugin": "^1.1.8",
+		"automattic/jetpack-plugins-installer": "^0.2.2",
+		"automattic/jetpack-my-jetpack": "^2.7.2"
 	},
 	"require-dev": {
 		"yoast/phpunit-polyfills": "1.0.4",
-		"automattic/jetpack-changelogger": "@dev"
+		"automattic/jetpack-changelogger": "^3.3.0"
 	},
 	"autoload": {
 		"classmap": [
@@ -22,15 +22,7 @@
 	"scripts": {
 		"watch": "echo 'This script is actually watching the Jetpack Backup package, not the plugin' && jetpack watch packages/backup"
 	},
-	"repositories": [
-		{
-			"type": "path",
-			"url": "../../packages/*",
-			"options": {
-				"monorepo": true
-			}
-		}
-	],
+	"repositories": [],
 	"minimum-stability": "dev",
 	"prefer-stable": true,
 	"config": {
