Do not display UI on WordPress.com Simple and WoA sites for now
See 1386-gh-dotcom-forge#issuecomment-1355343094

--- a/projects/packages/blaze/composer.json
+++ b/projects/packages/blaze/composer.json
@@ -11,6 +11,7 @@
 		"yoast/phpunit-polyfills": "1.0.4",
 		"automattic/jetpack-assets": "@dev",
 		"automattic/jetpack-changelogger": "@dev",
+		"automattic/jetpack-status": "@dev",
 		"automattic/wordbless": "@dev"
 	},
 	"autoload": {
