--- a/projects/packages/videopress/package.json
+++ b/projects/packages/videopress/package.json
@@ -42,6 +42,7 @@
 		"@types/wordpress__components": "19.10.0",
 		"@wordpress/browserslist-config": "5.5.0",
 		"autoprefixer": "10.4.12",
+		"copy-webpack-plugin": "11.0.0",
 		"jest": "29.3.1",
 		"jest-environment-jsdom": "29.3.1",
 		"postcss": "8.4.20",
@@ -52,8 +53,7 @@
 		"sass-loader": "12.4.0",
 		"typescript": "4.8.2",
 		"webpack": "5.72.1",
-		"webpack-cli": "4.9.1",
-		"copy-webpack-plugin": "11.0.0"
+		"webpack-cli": "4.9.1"
 	},
 	"engines": {
 		"node": "^16.13.2",
@@ -75,6 +75,7 @@
 		"@wordpress/core-data": "5.5.0",
 		"@wordpress/data": "7.6.0",
 		"@wordpress/date": "4.22.0",
+		"@wordpress/dom-ready": "3.22.0",
 		"@wordpress/editor": "12.21.0",
 		"@wordpress/element": "4.20.0",
 		"@wordpress/i18n": "4.22.0",
