Implement phpunit action runner on WP Cloud https://github.com/Automattic/wpcomsh/pull/1226
* Add wpcloud test suite to phpunit config

* Add wpcloud unit test GitHub action

* Atomic Persistent Data already loaded on WP Cloud

* Add manual trigger to wpcloud action

* Remove extra space for linting

* Only run wpcloud testing on pull request

Co-authored-by: Austin Winstanley <austin.winstanley@a8c.com>

--- a/projects/plugins/wpcomsh/phpunit.xml.dist
+++ b/projects/plugins/wpcomsh/phpunit.xml.dist
@@ -11,5 +11,14 @@
 		<testsuite name="wpcomsh">
 			<directory prefix="test-" suffix=".php">./tests/</directory>
 		</testsuite>
+		<testsuite name="wpcloud">
+			<directory prefix="test-" suffix=".php">tests/</directory>
+			<exclude>tests/feature-manager/test-feature-hooks.php</exclude>
+			<exclude>tests/test-blog-token-resilience.php</exclude>
+			<exclude>tests/test-frontend-notices.php</exclude>
+			<exclude>tests/test-functions.php</exclude>
+			<exclude>tests/test-plan-notices.php</exclude>
+			<exclude>tests/test-wpcom-features.php</exclude>
+		</testsuite>
 	</testsuites>
 </phpunit>
