[not verified] Adding a changelog.md file and updating versions

--- a/projects/plugins/crm/package.json
+++ b/projects/plugins/crm/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "jetpack-crm",
-	"version": "1.0.0",
+	"version": "5.5.2-alpha",
 	"description": "The CRM for WordPress",
 	"author": "Automattic",
 	"license": "GPL-2.0",
