--- a/projects/plugins/crm/package.json
+++ b/projects/plugins/crm/package.json
@@ -24,5 +24,9 @@
 		"gulp-uglify": "^3.0.2",
 		"sass": "^1.43.4",
 		"uglify-js": "^3.14.3"
+	},
+	"engines": {
+		"node": "^16.13.2",
+		"yarn": "use pnpm instead - see docs/yarn-upgrade.md"
 	}
 }
