--- a/projects/plugins/crm/composer.json
+++ b/projects/plugins/crm/composer.json
@@ -2,16 +2,7 @@
 	"name": "automattic/jetpackcrm",
 	"description": "[Jetpack CRM](https://jetpackcrm.com) Core CRM Plugin - WordPress.org Hosted",
 	"require-dev": {
-		"squizlabs/php_codesniffer": "*",
-		"codeception/codeception": "^4.1",
-		"codeception/module-asserts": "^1.0",
-		"codeception/module-phpbrowser": "^1.0",
-		"codeception/module-webdriver": "^1.0",
-		"codeception/module-db": "^1.0",
-		"codeception/module-filesystem": "^1.0",
-		"codeception/util-universalframework": "^1.0",
-		"wp-coding-standards/wpcs": "^2.3",
-		"sirbrillig/phpcs-changed": "^2.10"
+		"automattic/jetpack-changelogger": "@dev"
 	},
 	"scripts": {
 		"tests": "vendor/bin/codecept run acceptance --fail-fast",
@@ -31,6 +22,16 @@
 	"require": {
 		"automattic/woocommerce": "^3.0"
 	},
+	"repositories": [
+		{
+			"type": "path",
+			"url": "../../packages/*",
+			"options": {
+				"monorepo": true
+			}
+		}
+	],
+	"minimum-stability": "dev",
 	"extra": {
 		"mirror-repo": "Automattic/zero-bs-crm",
 		"changelogger": {
