Display PHP errors from unit tests https://github.com/Automattic/wpcomsh/pull/1227
Co-authored-by: Austin Winstanley <austin.winstanley@a8c.com>

--- a/projects/plugins/wpcomsh/phpunit.xml.dist
+++ b/projects/plugins/wpcomsh/phpunit.xml.dist
@@ -21,4 +21,8 @@
 			<exclude>tests/test-wpcom-features.php</exclude>
 		</testsuite>
 	</testsuites>
+	<php>
+		<ini name="display_errors" value="On" />
+		<ini name="display_startup_errors" value="On" />
+	</php>
 </phpunit>
