fix tests by bypassing remote request in tests.

--- a/projects/packages/blaze/composer.json
+++ b/projects/packages/blaze/composer.json
@@ -5,6 +5,7 @@
 	"license": "GPL-2.0-or-later",
 	"require": {
 		"automattic/jetpack-connection": "@dev",
+		"automattic/jetpack-constants": "@dev",
 		"automattic/jetpack-sync": "@dev"
 	},
 	"require-dev": {
