Required Review: Allow anyone who can approve to also approve docs/

--- a/.github/files/required-review.yaml
+++ b/.github/files/required-review.yaml
@@ -6,9 +6,10 @@
   teams:
    - jetpack-approvers
 
-# Everyone who can approve anything can merge pnpm.lock.
+# Everyone who can approve anything can merge pnpm.lock and docs.
 - name: pnpm lockfile, composer files
   paths:
+   - 'docs/**'
    - 'pnpm-lock.yaml'
    - 'projects/plugins/*/composer.lock'
    - 'projects/plugins/*/composer.json'
