Add migration plugin to templates

--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -21,6 +21,7 @@ body:
         - Boost
         - Beta
         - Debug Helper
+        - Migration
         - Protect
         - Search
         - Social
