--- a/projects/packages/blaze/package.json
+++ b/projects/packages/blaze/package.json
@@ -27,6 +27,7 @@
 		"@automattic/jetpack-shared-extension-utils": "workspace:*",
 		"@wordpress/block-editor": "10.5.0",
 		"@wordpress/components": "22.1.0",
+		"@wordpress/compose": "5.20.0",
 		"@wordpress/data": "7.6.0",
 		"@wordpress/element": "4.20.0",
 		"@wordpress/icons": "9.13.0",
