--- a/projects/plugins/boost/composer.json
+++ b/projects/plugins/boost/composer.json
@@ -14,21 +14,21 @@
 	"prefer-stable": true,
 	"require": {
 		"ext-json": "*",
-		"automattic/jetpack-admin-ui": "@dev",
-		"automattic/jetpack-assets": "@dev",
-		"automattic/jetpack-autoloader": "@dev",
-		"automattic/jetpack-composer-plugin": "@dev",
-		"automattic/jetpack-config": "@dev",
-		"automattic/jetpack-connection": "@dev",
-		"automattic/jetpack-device-detection": "@dev",
-		"automattic/jetpack-lazy-images": "@dev",
-		"automattic/jetpack-my-jetpack": "@dev",
-		"automattic/jetpack-plugin-deactivation": "@dev",
-		"automattic/jetpack-plugins-installer": "@dev",
+		"automattic/jetpack-admin-ui": "^0.2.15",
+		"automattic/jetpack-assets": "^1.17.29",
+		"automattic/jetpack-autoloader": "^2.11.15",
+		"automattic/jetpack-composer-plugin": "^1.1.9",
+		"automattic/jetpack-config": "^1.13.0",
+		"automattic/jetpack-connection": "^1.49.0",
+		"automattic/jetpack-device-detection": "^1.4.23",
+		"automattic/jetpack-lazy-images": "^2.1.29",
+		"automattic/jetpack-my-jetpack": "^2.7.4",
+		"automattic/jetpack-plugin-deactivation": "^0.1.2",
+		"automattic/jetpack-plugins-installer": "^0.2.2",
 		"tedivm/jshrink": "1.4.0"
 	},
 	"require-dev": {
-		"automattic/jetpack-changelogger": "@dev",
+		"automattic/jetpack-changelogger": "^3.3.1",
 		"automattic/wordbless": "0.4.1",
 		"brain/monkey": "2.6.1",
 		"yoast/phpunit-polyfills": "1.0.4"
@@ -78,15 +78,7 @@
 			"automattic/jetpack-composer-plugin": true
 		}
 	},
-	"repositories": [
-		{
-			"type": "path",
-			"url": "../../packages/*",
-			"options": {
-				"monorepo": true
-			}
-		}
-	],
+	"repositories": [],
 	"extra": {
 		"mirror-repo": "Automattic/jetpack-boost-production",
 		"autorelease": true,
