--- a/projects/packages/forms/composer.json
+++ b/projects/packages/forms/composer.json
@@ -50,7 +50,7 @@
 		},
 		"textdomain": "jetpack-forms",
 		"version-constants": {
-			"::PACKAGE_VERSION": "src/class-forms.php"
+			"::PACKAGE_VERSION": "src/class-jetpack-forms.php"
 		}
 	},
 	"config": {
