--- a/projects/plugins/wpcomsh/composer.json
+++ b/projects/plugins/wpcomsh/composer.json
@@ -14,7 +14,8 @@
     "automattic/jetpack-post-list": "^0.2.4"
   },
   "require-dev": {
-    "php": ">=7.0.0"
+    "php": ">=7.0.0",
+    "phpunit/phpunit": "^9"
   },
   "repositories": [
     {
