Bundle image-guide into a single file

--- a/projects/js-packages/image-guide/tsconfig.json
+++ b/projects/js-packages/image-guide/tsconfig.json
@@ -7,6 +7,8 @@
 		"forceConsistentCasingInFileNames": true,
 		"outDir": "./build/",
 		"noEmit": false,
-		"declaration": true
+		"declaration": true,
+		"module": "es6",
+		"target": "es5"
 	}
 }
