--- a/projects/js-packages/image-guide/package.json
+++ b/projects/js-packages/image-guide/package.json
@@ -16,7 +16,7 @@
 	"author": "Automattic",
 	"scripts": {
 		"prepare": "[ -e ./build/index.js ] || pnpm build",
-		"build": "tsc",
+		"build": "webpack",
 		"clean": "rm -rf build/",
 		"watch": "pnpm run build && pnpm webpack watch",
 		"test-coverage": "pnpm run test --coverageDirectory=\"$COVERAGE_DIR\" --coverage --coverageReporters=clover",
@@ -27,6 +27,7 @@
 		"@typescript-eslint/parser": "5.36.1",
 		"eslint": "8.22.0",
 		"jest": "29.3.1",
+		"ts-loader": "9.4.2",
 		"typescript": "4.8.2",
 		"webpack": "5.72.1",
 		"webpack-cli": "4.9.1"
