--- a/projects/packages/jetpack-mu-wpcom/composer.json
+++ b/projects/packages/jetpack-mu-wpcom/composer.json
@@ -52,5 +52,10 @@
 		"version-constants": {
 			"::PACKAGE_VERSION": "src/class-jetpack-mu-wpcom.php"
 		}
+	},
+	"config": {
+		"allow-plugins": {
+			"roots/wordpress-core-installer": true
+		}
 	}
 }
