--- a/projects/plugins/protect/package.json
+++ b/projects/plugins/protect/package.json
@@ -43,7 +43,8 @@
 		"prop-types": "15.8.1",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
-		"react-router-dom": "6.6.2"
+		"react-router-dom": "6.2.2",
+		"moment": "2.29.4"
 	},
 	"devDependencies": {
 		"@automattic/jetpack-webpack-config": "workspace:*",
