--- a/projects/js-packages/svelte-data-sync-client/package.json
+++ b/projects/js-packages/svelte-data-sync-client/package.json
@@ -19,7 +19,11 @@
     "test-coverage": "jest tests --coverage --collectCoverageFrom='src/**/*.js' --coverageDirectory=\"$COVERAGE_DIR\" --coverageReporters=clover"
   },
   "devDependencies": {
-    "jest": "29.3.1"
+    "jest": "29.3.1",
+    "svelte": "3.55.1",
+    "tslib": "2.3.1",
+    "typescript": "4.8.2",
+    "zod": "3.20.2"
   },
   "engines": {
     "node": "^16.13.2",
