--- a/projects/js-packages/svelte-data-sync-client/package.json
+++ b/projects/js-packages/svelte-data-sync-client/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0-alpha",
   "description": "A Svelte.js client for the wp-js-data-sync package",
   "homepage": "https://github.com/Automattic/jetpack/tree/HEAD/projects/js-packages/svelte-data-sync-client/#readme",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/Automattic/jetpack/labels/[JS Package] Svelte Data Sync Client"
   },
@@ -15,23 +16,30 @@
   "license": "GPL-2.0-or-later",
   "author": "Automattic",
   "scripts": {
-    "test": "jest tests",
-    "test-coverage": "jest tests --coverage --collectCoverageFrom='src/**/*.js' --coverageDirectory=\"$COVERAGE_DIR\" --coverageReporters=clover"
+    "prepare": "[ -e ./build/index.js ] || pnpm build",
+    "build": "pnpm run clean && webpack",
+    "clean": "rm -rf build/",
+    "watch": "pnpm run build && pnpm webpack watch",
+    "test-coverage": "pnpm run test --coverageDirectory=\"$COVERAGE_DIR\" --coverage --coverageReporters=clover",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "devDependencies": {
+    "@automattic/jetpack-webpack-config": "workspace:*",
+    "@typescript-eslint/parser": "5.36.1",
+	"eslint": "8.22.0",
     "jest": "29.3.1",
     "svelte": "3.55.1",
+    "ts-loader": "9.4.2",
     "tslib": "2.3.1",
     "typescript": "4.8.2",
+    "webpack": "5.72.1",
+    "webpack-cli": "4.9.1",
     "zod": "3.20.2"
   },
   "engines": {
     "node": "^16.13.2",
     "yarn": "use pnpm instead - see docs/yarn-upgrade.md"
   },
-  "exports": {
-    ".": "./index.jsx",
-    "./state": "./src/state",
-    "./action-types": "./src/state/action-types"
-  }
+  "main": "./build/index.js",
+  "types": "./build/index.d.ts"
 }
