Reviewer list: add Heart Of Gold for new packages
See #28495 and #28496

--- a/.github/files/required-review.yaml
+++ b/.github/files/required-review.yaml
@@ -103,6 +103,8 @@
    - 'projects/plugins/boost/**'
    - 'projects/plugins/super-cache/**'
    - 'projects/js-packages/image-guide/**'
+   - 'projects/js-packages/svelte-data-sync-client/**'
+   - 'projects/packages/wp-js-data-sync/**'
    - '!projects/plugins/*/composer.lock'
    - '!projects/plugins/*/composer.json'
    - '!projects/plugins/*/changelog/*'
