Add wordbless to correct composer file

--- a/projects/plugins/jetpack-mu-wpcom-plugin/composer.json
+++ b/projects/plugins/jetpack-mu-wpcom-plugin/composer.json
@@ -8,8 +8,7 @@
 	},
 	"require-dev": {
 		"yoast/phpunit-polyfills": "1.0.4",
-		"automattic/jetpack-changelogger": "@dev",
-		"automattic/wordbless": "^0.4.0"
+		"automattic/jetpack-changelogger": "@dev"
 	},
 	"autoload": {
 		"classmap": [
@@ -25,9 +24,7 @@
 		],
 		"test-php": [
 			"@composer phpunit"
-		],
-		"post-install-cmd": "WorDBless\\Composer\\InstallDropin::copy",
-		"post-update-cmd": "WorDBless\\Composer\\InstallDropin::copy"
+		]
 	},
 	"repositories": [
 		{
