Add pnpm build step to composer.json for jetpack/forms

--- a/projects/packages/forms/package.json
+++ b/projects/packages/forms/package.json
@@ -16,6 +16,7 @@
 	"author": "Automattic",
 	"scripts": {
 		"build": "pnpm run build:contact-form",
+		"build-production": "NODE_ENV=production BABEL_ENV=production pnpm run build:contact-form",
 		"build:contact-form": "NODE_PATH=\"$PWD/node_modules\" webpack --config ./tools/webpack.config.contact-form.js",
 		"clean": "true"
 	},
