Add missing Jetpack connection dependency

--- a/projects/packages/forms/composer.json
+++ b/projects/packages/forms/composer.json
@@ -6,6 +6,7 @@
 	"require-dev": {
 		"yoast/phpunit-polyfills": "1.0.4",
 		"automattic/jetpack-changelogger": "@dev",
+		"automattic/jetpack-connection": "@dev",
 		"automattic/wordbless": "^0.4.1"
 	},
 	"autoload": {
